Archive/4a302d605c6985c5d82252372ac1dbcd-b9c56c160433c6ec12c50b91c3cb852e/output
+ g++ -std=c++1y -O3 -Wall -Wextra -Woverloaded-virtual -pedantic-errors -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:12:8: error: use of deleted function ‘void f(T) [with T = long long unsigned int; typename std::enable_if<(sizeof (int) < sizeof (T)), int>::type ...<anonymous> = {}]’
     f(x);
        ^
main.cpp:4:6: error: declared here
 void f(T) = delete;
      ^
